# ai-manim

./: .dockerignore  .envrc  .gitignore  DockerFile-api  DockerFile-worker  LICENSE  README.md  dockercompose.yml  manim_test.py  pyproject.toml  requirements_api.txt  requirements_worker.txt
alembic/: README  env.py
alembic/versions/: 4a3374e096ac_add_conversation_and_message_tables_.py  60cd9d87c58b_.py  79513b721361_create_users_and_items_tables.py
app/: celery_app.py  database.py  main.py  models.py
app/core/middleware/: annoynomous_track_middleware.py
app/llm_calls/: gemini.py  server_and_code_gen_bridge.py
app/manim/: code_cleanup.py  code_runner.py
app/routers/: chat_routes.py
shared_models/: database.py  models.py
worker/: celery_app.py
worker/aws/: upload_to_s3.py
worker/llm/: gemini.py
worker/manim/: code_cleanup.py  temp_script.py
worker/tasks/: code_generation_tasks.py  video_rendering_tasks.py
