[project]
name = "ai-manim"
version = "0.1.0"
description = ""
authors = [
    {name = "Rishav", email = "rishishah907@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "manim (>=0.19.0,<0.20.0)",
    "langchain-text-splitters (>=0.3.8,<0.4.0)",
    "langchain[google-genai] (>=0.3.25,<0.4.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "langchain-google-genai (>=2.1.4,<3.0.0)",
    "alembic (>=1.16.2,<2.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)"
]
packages = [{include = "ai_manim"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
